--- a/static/css/main.css
+++ b/static/css/main.css
@@ -485,7 +485,7 @@
 }
 
 .footer p {
-  font-family: "SF Compact Display", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 19px;
   color: #393939;
@@ -501,7 +501,7 @@
 }
 
 .footer ul li {
-  font-family: "SF Compact Display", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 19px;
   color: #393939;
@@ -511,7 +511,7 @@
 }
 
 .footer ul li a {
-  font-family: "SF Compact Display", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 19px;
   color: #393939;
@@ -543,10 +543,29 @@
 }
 
 .footer p a {
-  font-family: "SF Compact Display", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 29px;
   color: #393939;
+}
+
+.wp-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.wp-ic {
+  padding: 6px 8px 3px 8px;
+  border-radius: 8px;
+  background-color: #000000;
+}
+
+.wp-ic i {
+  color: #ffffff;
+  font-size: 18px;
+  margin-bottom: 0;
 }
 
 .mobile-navigation {
@@ -598,22 +617,23 @@
 }
 
 section.mempelai {
-  padding-top: 82px;
-  padding-bottom: 82px;
+  padding-top: 182px;
+  padding-bottom: 182px;
 }
 
 p.opening1 {
-  font-size: 20px;
-  margin-bottom: 0;
+  font-size: 24px;
+  margin-bottom: 12px;
   font-weight: bold;
   text-align: center;
 }
 
 p.opening2 {
   font-size: 16px;
-  margin-bottom: 24px;
+  margin-bottom: 62px;
   font-weight: normal;
   text-align: center;
+  padding: 0px 12px;
 }
 
 p.nama {
