--- a/static/css/main.css
+++ b/static/css/main.css
@@ -194,6 +194,7 @@
 }
 
 .date {
+  padding-top: 100px;
   background-color: #fbfbfb;
   padding-bottom: 100px;
 }
@@ -212,7 +213,7 @@
   font-size: 60px;
   line-height: 70px;
   color: #000000;
-  margin-bottom: 81px;
+  margin-bottom: 0;
   max-width: 640px;
 }
 
@@ -315,14 +316,12 @@
   color: #393939;
   max-width: 620px;
   margin-bottom: 20px;
-  margin-left: 10%;
 }
 
 .closing ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 10%;
 }
 
 .closing ul li {
@@ -340,7 +339,6 @@
   color: #393939;
   margin-bottom: 0;
   max-width: 380px;
-  margin-left: auto;
 }
 
 .closing .closing-image {
@@ -354,10 +352,7 @@
   line-height: 70px;
   color: #000000;
   max-width: 623px;
-  margin-top: -84px;
   margin-bottom: 0;
-  margin-left: 50%;
-  transform: translateX(-60%);
 }
 
 .wrapper-moments-img {
@@ -629,22 +624,21 @@ p.opening1 {
 }
 
 p.opening2 {
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 62px;
   font-weight: normal;
   text-align: center;
-  padding: 0px 12px;
 }
 
 p.nama {
   font-family: 'Yellowtail', cursive;
-  font-size: 24px;
+  font-size: 28px;
   margin-bottom: 0;
   text-align: center;
 }
 
 p.anak {
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
 }
 
