--- a/static/css/main.css
+++ b/static/css/main.css
@@ -731,3 +731,54 @@ img.zoom-img {
 button:focus {
   outline: none !important;
 }
+
+.card-gift {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-gift img {
+  width: 140px;
+  margin-bottom: 12px;
+}
+
+.card-gift p {
+  text-align: center;
+}
+
+.card-gift p.rx {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.gift {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #fbfbfb;
+}
+
+.gift h5 {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.gift p {
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.btn-copy {
+  background-color: #ffffff;
+  color: #000000;
+  border: 1px solid #000000;
+  border-radius: 14px;
+  font-size: 14px;
+  padding: 8px 18px;
+}
+
+.btn-copy:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
