--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -255,7 +255,7 @@
   }
 
   .form p {
-    font-family: "ivypresto-display", serif;
+    font-family: "Roboto", sans-serif;
     font-size: 28px;
     line-height: 32px;
     font-weight: bold;
@@ -639,7 +639,7 @@
   }
 
   .form p {
-    font-family: "ivypresto-display", serif;
+    font-family: "Roboto", sans-serif;
     font-size: 28px;
     line-height: 32px;
     font-weight: bold;
