--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,6 +71,20 @@
   z-index: 2;
 }
 
+.main-banner .wrapper-main-banner::after {
+  content: "15.05.2022 | Lamongan";
+  font-family: 'Crimson Pro', serif;
+  font-weight: 200;
+  position: absolute;
+  bottom: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 16px;
+  line-height: 22px;
+  color: #000000;
+  z-index: 2;
+}
+
 .main-banner .main-banner-img {
   width: 100%;
   max-width: 323px;
@@ -200,7 +214,7 @@
 }
 
 .date .date-title {
-  font-family: "SF Compact Display", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 29px;
   color: #393939;
@@ -268,7 +282,7 @@
 }
 
 .place .maps-detail {
-  font-family: "ivypresto-display", serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 29px;
   color: #393939;
@@ -322,6 +336,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 38px;
 }
 
 .closing ul li {
@@ -337,7 +352,7 @@
   font-size: 16px;
   line-height: 29px;
   color: #393939;
-  margin-bottom: 0;
+  margin-bottom: 38px;
   max-width: 380px;
 }
 
@@ -348,8 +363,8 @@
 .closing .closing-3 {
   font-family: "ivypresto-display", serif;
   font-weight: bold;
-  font-size: 60px;
-  line-height: 70px;
+  font-size: 48px;
+  line-height: 56px;
   color: #000000;
   max-width: 623px;
   margin-bottom: 0;
@@ -769,11 +784,12 @@ button:focus {
 
 .gift h5 {
   text-align: center;
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 500;
 }
 
 .gift p {
+  font-family: "Roboto", sans-serif;
   text-align: center;
   margin-bottom: 12px;
 }
